--- a/typescript-random-gmap-company/package.json
+++ b/typescript-random-gmap-company/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^8.3.1"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   }
 }
