--- a/typescript-random-gmap-company/package.json
+++ b/typescript-random-gmap-company/package.json
@@ -14,7 +14,8 @@
   "author": "Daniel Escobar",
   "license": "ISC",
   "dependencies": {
-    "@faker-js/faker": "^8.3.1"
+    "@faker-js/faker": "^8.3.1",
+    "@types/google.maps": "^3.54.10"
   },
   "devDependencies": {
     "buffer": "^6.0.3"
