--- a/typescript-web-framework/package.json
+++ b/typescript-web-framework/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "json-server": "json-server -w db.json"
+    "json-server": "json-server -w db.json",
+    "start:db": "npm run json-server",
+    "start:parcel": "npx parcel index.html"
   },
   "keywords": [
     "typescript",
