--- a/typescript-web-framework/package.json
+++ b/typescript-web-framework/package.json
@@ -18,5 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.4"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3"
   }
 }
