--- a/typescript-web-framework/package.json
+++ b/typescript-web-framework/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "json-server": "^0.17.4"
   },
   "devDependencies": {
