--- a/typescript-with-express-decorators/package.json
+++ b/typescript-with-express-decorators/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.2.1"
   }
 }
